--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="etchasketch.js" defer></script>
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    
+    <div class="container body">
+        <div class="menu container">
+            <button class="reset">Reset</button>
+            <button class="changeSize">Change Size</button>
+        </div>
+        <div class="sketch container"></div>
+    </div>
 </body>
 </html>
